cambios en css, js, ajustes en la galeria de imágenes

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,8 @@
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
             <article class="img-fondo">
-                <img src="../media/portada.png" width="95%" alt="Dólmen Mandubi">
+                <div><h1 class="title fs-1">Mandubizelaia Trikuharria</h1></div>
+                <img src="../media/portada2.png" alt="Dólmen Mandubi">
             </article>
         </section>
 
