--- a/html/investigacion/galeria.html
+++ b/html/investigacion/galeria.html
@@ -28,22 +28,89 @@
             </div>
             <article class="galery-container">
                 <div class="img-ampliada">
-                  <img id="imgGalery" src="../../media/Galeriafotos/Piezas/01_Piezak.jpg" alt="" />
+                    <img 
+                        id="imgGalery" 
+                        src="../../media/GaleriaFotos/Piezas/01_Piezak.jpg" 
+                        alt="Piezak trikuharri" 
+                        data-description="Mandubi zelaiko trikuharriaren argazkiak"/>
                 </div>
-                <div class="carousel">
-                  <div class="container-carousel-img">
-                      <img class="img-carousel" data-pos="-5" src="../../media/Galeriafotos/Piezas/01_Piezak.jpg" alt="1">
-                      <img class="img-carousel" data-pos="-4" src="../../media/Galeriafotos/Piezas/02_Piezak.jpg" alt="2">
-                      <img class="img-carousel" data-pos="-3" src="../../media/Galeriafotos/Piezas/03_Piezak.jpg" alt="3">
-                      <img class="img-carousel" data-pos="-2" src="../../media/Galeriafotos/Piezas/04_Piezak.jpg" alt="4">
-                      <img class="img-carousel" data-pos="-1" src="../../media/Galeriafotos/Piezas/05_Piezak.jpg" alt="5">
-                      <img class="img-carousel" data-pos="0" src="../../media/Galeriafotos/Piezas/06_Piezak.jpg" alt="6">
-                      <img class="img-carousel" data-pos="1" src="../../media/Galeriafotos/Piezas/07_Piezak.jpg" alt="7">
-                      <img class="img-carousel" data-pos="2" src="../../media/Galeriafotos/Piezas/08_Piezak.jpg" alt="8">
-                      <img class="img-carousel" data-pos="3" src="../../media/Galeriafotos/Piezas/09_Piezak.jpg" alt="9">
-                      <img class="img-carousel" data-pos="4" src="../../media/Galeriafotos/Piezas/10_Piezak.jpg" alt="10">
-                      <img class="img-carousel" data-pos="5" src="../../media/Galeriafotos/Piezas/11_Piezak.jpg" alt="11">
-                  </div>
+                <div id="wrapper">
+                    <div id="carousel">
+                        <div id="content">
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/01_Piezak.jpg"
+                            class="item"
+                            alt="Piezak 1"
+                            data-description="Mandubi 1 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/02_Piezak.jpg"
+                            class="item"
+                            alt="02_Piezak"
+                            data-description="Piezak 2 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/03_Piezak.jpg"
+                            class="item"
+                            alt="03_Piezak"
+                            data-description="Piezak 3 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/04_Piezak.jpg"
+                            class="item"
+                            alt="04_Piezak"
+                            data-description="Piezak 4 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/05_Piezak.jpg"
+                            class="item"
+                            alt="05_Piezak"
+                            data-description="Piezak 5 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/06_Piezak.jpg"
+                            class="item"
+                            alt="06_Piezak"
+                            data-description="Piezak 6 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/07_Piezak.jpg"
+                            class="item"
+                            alt="07_Piezak"
+                            data-description="Piezak 7 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/08_Piezak.jpg"
+                            class="item"
+                            alt="08_Piezak"
+                            data-description="Piezak 8 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/09_Piezak.jpg"
+                            class="item"
+                            alt="09_Piezak"
+                            data-description="Piezak 9 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Piezas/10_Piezak.jpg"
+                            class="item"
+                            alt="10_Piezak"
+                            data-description="Piezak 10 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                        src="../../media/GaleriaFotos/Piezas/11_Piezak.jpg"
+                            class="item"
+                            alt="11_Piezak"
+                            data-description="Piezak 11 zelaiko trikuharriaren argazkiak"
+                        />
+                        </div>
+                    </div>
+                    <button id="prev">
+                        <img src="../../media/arrowLeftBlue.svg" alt="icono antes">
+                    </button>
+                    <button id="next">
+                        <img src="../../media/arrowRightBlue.svg" alt="icono siguiente">
+                    </button>
                 </div>
             </article>
             <article class="galery-info-container">
@@ -51,10 +118,10 @@
                     <li>
                       <h1 class="title fs-1">Informazioa</h1>
                       <ul class="container-text-maps">
-                        <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br>
-                          Dolmen 1</p></li>
-                        <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br>
-                          lorem impsum lorem impsum lorem impsum</p></li>
+                        <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br></p>
+                        </li><p id="textTitle">Mandubi trikuharri</p>
+                        <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br></p>
+                        </li><p id="textDes">Mandubi zelaiko trikuharriaren argazkiak</p>
                       </ul>
                     </li>
                 </ol>
