--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -42,7 +42,7 @@
                              
                 <p class="fs-5">Indusketa amaitu ondoren aurretik zuen itxura eman ahal izateko ateratako harriak eta lurrak itzuli ziren egiturara.</p>
 
-                <p class="fs-5"><img src="../../media/investigacion.png" alt="proceso" width="90%"></p>
+                <p class="fs-5"><img class="w-100" src="../../media/investigacion.png" alt="proceso"></p>
 
 
                 <br>
