--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -49,7 +49,7 @@ Abeltzain-talde horien osaketa ez zen herriskakoaren berdina, badirudi ugariagoa
                 <li class="button-nav-bar"><a href="mapa.html"><img src="../../media/roadWhite.svg" alt="icono como llegar"><p>Nola iritsi</p></a></li>
                 <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Argazkiak</p></a></li>
                 <li class="button-nav-bar"><a href="galeriaVR.html"><img src="../../media/vrWhite.svg" alt="icono galeria realidad aumentada"><p>VR Galeria</p></a></li>
-                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Mandubi 360º</p></a></li>
+                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Mandubi</p></a></li>
             </ol>
         </nav>
     </div>
