--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -32,7 +32,7 @@
                 <div id="map"></div>
             </article>-->
             <article class="maps-container">
-                <p class="fs-5"><img style="border-radius: 15px;" src="../../media/MapaTrikuharri.png" alt="proceso" width="90%"></p>
+                <p class="map fs-5"><img  src="../../media/MapaTrikuharri.png" alt="proceso"></p>
             </article>
             
             <article class="maps-info-container">
