--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -20,22 +20,22 @@
                 <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
-            <article class="overflow-auto container-cards-scroll">
+            <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Trikuharriak Euskal Herrian</h1>
                 <p class="fs-5">Hurrengo testuetan, Euskal Herrian izan diren Trikuharrien informazio orokorra eta hauen azalpena emango da.</p>
 
                 <br>
                 <h3>Neolitoaren hasiera Euskal Herrian</h3>
-                <p class="fs-5"><img src="../../media/Historia/Neolito.png" alt="proceso" width="90%"></p>
+                <p class="fs-5"><img class="w-100" src="../../media/Historia/Neolito.png" alt="proceso"></p>
 
                 <br>
                 <h3>Trikuharriaren kronologia</h3>
-                <p class="fs-5"><img src="../../media/Historia/Kronologia.png" alt="proceso" width="90%"></p>
+                <p class="fs-5"><img class="w-100" src="../../media/Historia/Kronologia.png" alt="proceso"></p>
 
                 <br>
                 <h3>Egitura hauen aniztasuna</h3>
-                <p class="fs-5"><img src="../../media//Historia/Egitura1.png" alt="proceso" width="90%"></p><br>
-                <p class="fs-5"><img src="../../media//Historia/Egitura1.png" alt="proceso" width="90%"></p>
+                <p class="fs-5"><img class="w-100" src="../../media//Historia/Egitura1.png" alt="proceso"></p><br>
+                <p class="fs-5"><img class="w-100" src="../../media//Historia/Egitura1.png" alt="proceso"></p>
 
                 <br>
                 <h3>Diseinua eta lanaren antolaketa</h3>
