--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -14,8 +14,7 @@
     <!-- javaScript main-->
     <script src="../../js/main.js"></script>
 </head>
-<body onload="cargarCarousel()">
-    <!-- Panel Galería de imágenes -->
+  <body onload="cargarCarousel()">
     <div class="flex-container">
         <section class="container-info data-dolmen">
             <div class="container-button">
@@ -24,30 +23,125 @@
             </div>
             <article class="galery-container">
                 <div class="img-ampliada">
-                  <img id="imgGalery" src="../../media/GaleriaFotos/Mandubi/09_Mandubi.jpg" alt="" />
+                    <img 
+                        id="imgGalery" 
+                        src="../../media/GaleriaFotos/Mandubi/09_Mandubi.jpg" 
+                        alt="Mandubi trikuharri" 
+                        data-description="Mandubi zelaiko trikuharriaren argazkiak"/>
                 </div>
-                <div class="carousel">
-                  <button class="button-carousel" type="button" onclick="moveImg()"><img src="../../media/arrowLeftBlue.svg" alt="icono flecha"> </button>
-                  <div class="container-carousel-img">
-                    <div><img class="img-carousel" data-pos="-8" src="../../media/Galeriafotos/Mandubi/01_Mandubi.jpg" alt="1"></div>
-                    <div><img class="img-carousel" data-pos="-7" src="../../media/Galeriafotos/Mandubi/02_Mandubi.jpg" alt="2"></div>
-                    <div><img class="img-carousel" data-pos="-6" src="../../media/Galeriafotos/Mandubi/03_Mandubi.jpg" alt="3"></div>
-                    <div><img class="img-carousel" data-pos="-5" src="../../media/Galeriafotos/Mandubi/04_Mandubi.jpg" alt="4"></div>
-                    <div><img class="img-carousel" data-pos="-4" src="../../media/Galeriafotos/Mandubi/05_Mandubi.jpg" alt="5"></div>
-                    <div><img class="img-carousel" data-pos="-3" src="../../media/Galeriafotos/Mandubi/06_Mandubi.jpg" alt="6"></div>
-                    <div><img class="img-carousel" data-pos="-2" src="../../media/Galeriafotos/Mandubi/07_Mandubi.jpg" alt="7"></div>
-                    <div><img class="img-carousel" data-pos="-1" src="../../media/Galeriafotos/Mandubi/08_Mandubi.jpg" alt="8"></div>
-                    <div><img class="img-carousel" data-pos="0" src="../../media/Galeriafotos/Mandubi/09_Mandubi.jpg" alt="9"></div>
-                    <div><img class="img-carousel" data-pos="1" src="../../media/Galeriafotos/Mandubi/10_Mandubi.jpg" alt="10"></div>
-                    <div><img class="img-carousel" data-pos="2" src="../../media/Galeriafotos/Mandubi/11_Mandubi.jpg" alt="11"></div>
-                    <div><img class="img-carousel" data-pos="3" src="../../media/Galeriafotos/Mandubi/12_Mandubi.jpg" alt="12"></div>
-                    <div><img class="img-carousel" data-pos="4" src="../../media/Galeriafotos/Mandubi/13_Mandubi.jpg" alt="13"></div>
-                    <div><img class="img-carousel" data-pos="5" src="../../media/Galeriafotos/Mandubi/14_Mandubi.jpg" alt="14"></div>
-                    <div><img class="img-carousel" data-pos="6" src="../../media/Galeriafotos/Mandubi/15_Mandubi.jpg" alt="15"></div>
-                    <div><img class="img-carousel" data-pos="7" src="../../media/Galeriafotos/Mandubi/16_Mandubi.jpg" alt="16"></div>
-                    <div><img class="img-carousel" data-pos="8" src="../../media/Galeriafotos/Mandubi/17_Mandubi.jpg" alt="17"></div>                  
-                  </div>
-                  <button class="button-carousel" type="button" onclick="moveImg()"><img src="../../media/arrowRightBlue.svg" alt="icono flecha"></button>
+                <div id="wrapper">
+                    <div id="carousel">
+                        <div id="content">
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/01_Mandubi.jpg"
+                            class="item"
+                            alt="Mandubi trikuharri"
+                            data-description="Mandubi 1 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/02_Mandubi.jpg"
+                            class="item"
+                            alt="02_Mandubi"
+                            data-description="Mandubi 2 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/03_Mandubi.jpg"
+                            class="item"
+                            alt="03_Mandubi"
+                            data-description="Mandubi 3 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/04_Mandubi.jpg"
+                            class="item"
+                            alt="04_Mandubi"
+                            data-description="Mandubi 4 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/05_Mandubi.jpg"
+                            class="item"
+                            alt="05_Mandubi"
+                            data-description="Mandubi 5 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/06_Mandubi.jpg"
+                            class="item"
+                            alt="06_Mandubi"
+                            data-description="Mandubi 6 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/07_Mandubi.jpg"
+                            class="item"
+                            alt="07_Mandubi"
+                            data-description="Mandubi 7 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/08_Mandubi.jpg"
+                            class="item"
+                            alt="08_Mandubi"
+                            data-description="Mandubi 8 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/09_Mandubi.jpg"
+                            class="item"
+                            alt="09_Mandubi"
+                            data-description="Mandubi 9 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/10_Mandubi.jpg"
+                            class="item"
+                            alt="10_Mandubi"
+                            data-description="Mandubi 10 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/11_Mandubi.jpg"
+                            class="item"
+                            alt="11_Mandubi"
+                            data-description="Mandubi 11 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/12_Mandubi.jpg"
+                            class="item"
+                            alt="12_Mandubi"
+                            data-description="Mandubi 12 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/13_Mandubi.jpg"
+                            class="item"
+                            alt="13_Mandubi"
+                            data-description="Mandubi 13 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/14_Mandubi.jpg"
+                            class="item"
+                            alt="14_Mandubi"
+                            data-description="Mandubi 14 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/15_Mandubi.jpg"
+                            class="item"
+                            alt="15_Mandubi"
+                            data-description="Mandubi 15 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/16_Mandubi.jpg"
+                            class="item"
+                            alt="16_Mandubi"
+                            data-description="Mandubi 16 zelaiko trikuharriaren argazkiak"
+                        />
+                        <img
+                            src="../../media/GaleriaFotos/Mandubi/17_Mandubi.jpg"
+                            class="item"
+                            alt="17_Mandubi"
+                            data-description="Mandubi 17 zelaiko trikuharriaren argazkiak"
+                        />
+                        </div>
+                    </div>
+                    <button id="prev">
+                        <img src="../../media/arrowLeftBlue.svg" alt="icono antes">
+                    </button>
+                    <button id="next">
+                        <img src="../../media/arrowRightBlue.svg" alt="icono siguiente">
+                    </button>
                 </div>
             </article>
             <article class="galery-info-container">
@@ -55,15 +149,15 @@
                     <li>
                       <h1 class="title fs-1">Informazioa</h1>
                       <ul class="container-text-maps">
-                        <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br>
-                            Mandubi trikuharri</p></li>
-                          <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br>
-                            Mandubi zelaiko trikuharriaren argazkiak</p></li>
+                        <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u></p>
+                           </li><p id="textTitle">Mandubi trikuharri</p>
+                          <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u></p>
+                            </li><p id="textDes">Mandubi zelaiko trikuharriaren argazkiak</p>
                       </ul>
                     </li>
                 </ol>
             </article>
         </section>
     </div>
-</body>
+  </body>
 </html>
