Agregamos el banner de los sponsors en la imagen de la portada. También agregar los sponsor en la parte de investigación

--- a/html/investigacion/investigacion.html
+++ b/html/investigacion/investigacion.html
@@ -50,6 +50,10 @@
                 <p class="fs-5">Hasierako ideia, industu ondoren trikuharria erakusgarri jartzea izan bazen ere, horretarako zein neurri har ote zitezkeen aztertu zen. Azkenean, Giorgio Studer, <b>Gipuzkoako Foru Aldundiako errestauradorea</b>, eta Joxean Mujika arkeologoaren aholkuaz hori baztertu egin zen, izan ere hiru harlauza handietatik bakarra da kareharriz osatutakoa eta beste biak harbel-harrizkoak direnez, azken hauek azalean utziz gero izotzagatik asko hondatuko zirelako, indusketan bertan ere ikusi ahal izan zen bezala. 
                 Gordailuan -Irun-, Gipuzkoako Ondare Bildumen Zentroa -Gipuzkoako Foru Aldundia-, aurkitzen da bertan ateratako materiala.</p>
 
+                <br>
+                <h3>Babesleak</h3>
+                <p class="fs-5"><img class="w-50" src="../../media/BannerMandubi.png" alt="proceso"></p>
+
                 <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
             </article>
