--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -33,23 +33,27 @@
         <article class="maps-container">
           <div id="map"></div>
         </article>
-        <article class="maps-info-container">
-          <ol id="info">
-            <li>
-              <h1 class="title fs-1">Informazioa</h1>
-              <ul class="container-text-maps">
-                <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
-                  Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta, Zumarraga, Urretxu</p></li>
-                <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Aparkalekua:</u><br> 
-                  Mandubizelaira iristeko aparkalekua.</p></li>
-              </ul>
-            </li>
-          </ol>
-            <button class="button-info" onclick=" window.open('https://goo.gl/maps/9xtdw3nFYw3jEKTt6','_blank')">
+
+            <article class="maps-info-container">
+                <ol id="info">
+                  <li>
+                    <h1 class="title fs-1">Informazioa</h1>
+                    <ul class="container-text-maps">
+                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
+                         Itsaso, Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta, Zumarraga, Urretxu</p></li>
+                      <button class="button-info" onclick=" window.open('https://goo.gl/maps/MStcKPMKZuhxoo5v7','_blank')">
                     <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-                    <div><p>Nola iritsi</p></div>
-            </button>
-        </article>
+                    <div><p>Aparkalekua</p></div>
+                </button>  
+                    </ul>
+                  </li>
+                </ol>
+                <button class="button-info" onclick=" window.open('https://goo.gl/maps/bqdba14S4fdR5iZR6','_blank')">
+                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
+                    <div><p>Mandubizelaia</p></div>
+                </button>
+            </article>
+
       </section>
     </div>
     <!-- Api Mapbox -->
