--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -41,16 +41,19 @@
                     <h1 class="title fs-1">Informazioa</h1>
                     <ul class="container-text-maps">
                       <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
-                        lorem impsum lorem impsum lorem impsum</p></li>
-                      <li><img src="../../media/busBlue.svg" alt="icono transporte"><p><u>Aparkalekua </u><br></li>
+                         Itsaso, Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta, Zumarraga, Urretxu</p></li>
+                      <button class="button-info" onclick=" window.open('https://goo.gl/maps/MStcKPMKZuhxoo5v7','_blank')">
+                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
+                    <div><p>Aparkalekua</p></div>
+                </button>  
                     </ul>
                   </li>
                 </ol>
-                <button class="button-info" onclick=" window.open('https://goo.gl/maps/9xtdw3nFYw3jEKTt6','_blank')">
+                <button class="button-info" onclick=" window.open('https://goo.gl/maps/bqdba14S4fdR5iZR6','_blank')">
                     <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-                    <div><p>Nola iritsi</p></div>
+                    <div><p>Mandubizelaia</p></div>
                 </button>
-              </article>
+            </article>
         </section>
     </div>
 </body>
