Actualizamos el icono de la descripción en los ficheros

--- a/html/investigacion/galeria.html
+++ b/html/investigacion/galeria.html
@@ -120,7 +120,7 @@
                       <ul class="container-text-maps">
                         <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br></p>
                         </li><p id="textTitle">Mandubi trikuharri</p>
-                        <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br></p>
+                        <li><img src="../../media/descriptionBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br></p>
                         </li><p id="textDes">Mandubi zelaiko trikuharriaren argazkiak</p>
                       </ul>
                     </li>
