--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -150,7 +150,7 @@
                 <ul class="container-text-maps">
                   <li><img src="../../media/dolmenBlue.svg" alt="icono dolmen"><p><u>Izena:</u><br></p>
                   </li><p id="textTitle">Mandubi Zelaiko Trikuharria</p>
-                  <li><img src="../../media/mapBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br></p>
+                  <li><img src="../../media/descriptionBlue.svg" alt="icono mapa"><p><u>Deskribapena:</u><br></p>
                   </li><p id="textDes">Mandubi Zelaiko Trikuharriaren 3D</p>
                 </ul>
               </li>
