Agregamos el favicon a las páginas. También cambiamos el título de las páginas

--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mandubi Trikuharria</title>
+    <title>Mandubizelaia Trikuharria</title>
     <link rel="stylesheet" href="../../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="../../media/dolmenBlue.svg">
     <script src="../../js/main.js"></script>
     <!-- libreria A-FRAME -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
