--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mandubi Trikuharria</title>
+    <title>Mandubizelaia Trikuharria</title>
     <link rel="stylesheet" href="../../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -21,6 +21,7 @@
     />
     <!-- Mapbox style -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../../media/dolmenBlue.svg">
   </head>
   <body onload="cargarMapa()">
     <!-- Panel mapa de los dólmenes -->
