--- a/html/investigacion/galeria.html
+++ b/html/investigacion/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mandubi Trikuharria</title>
+    <title>Mandubizelaia Trikuharria</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- fuentes de google -->
@@ -14,6 +14,7 @@
 
     <!--Keen slider-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.5.0/keen-slider.min.css"/>
+    <link rel="icon" type="image/x-icon" href="../../media/dolmenBlue.svg">
 
     <!-- javaScript main-->
     <script src="../../js/main.js"></script>
