Subimos las imágenes correspondientes a la investigación al igual que están en la página web

--- a/html/investigacion/galeria.html
+++ b/html/investigacion/galeria.html
@@ -31,79 +31,90 @@
                 <div class="img-ampliada">
                     <img 
                         id="imgGalery" 
-                        src="../../media/GaleriaFotos/Piezas/01_Piezak.jpg" 
+                        src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-botoia.jpeg" 
                         alt="Piezak trikuharri" 
-                        data-description="Mandubi zelaiko trikuharriaren argazkiak"/>
+                        data-description="Kalkolito garaikoak - V-erara zulatutako hezurrezko botoia"/>
                 </div>
                 <div id="wrapper">
                     <div id="carousel">
                         <div id="content">
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/01_Piezak.jpg"
-                            class="item"
-                            alt="Piezak 1"
-                            data-description="Mandubi 1 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/02_Piezak.jpg"
-                            class="item"
-                            alt="02_Piezak"
-                            data-description="Piezak 2 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/03_Piezak.jpg"
-                            class="item"
-                            alt="03_Piezak"
-                            data-description="Piezak 3 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/04_Piezak.jpg"
-                            class="item"
-                            alt="04_Piezak"
-                            data-description="Piezak 4 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/05_Piezak.jpg"
-                            class="item"
-                            alt="05_Piezak"
-                            data-description="Piezak 5 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/06_Piezak.jpg"
-                            class="item"
-                            alt="06_Piezak"
-                            data-description="Piezak 6 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/07_Piezak.jpg"
-                            class="item"
-                            alt="07_Piezak"
-                            data-description="Piezak 7 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/08_Piezak.jpg"
-                            class="item"
-                            alt="08_Piezak"
-                            data-description="Piezak 8 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/09_Piezak.jpg"
-                            class="item"
-                            alt="09_Piezak"
-                            data-description="Piezak 9 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Piezas/10_Piezak.jpg"
-                            class="item"
-                            alt="10_Piezak"
-                            data-description="Piezak 10 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                        src="../../media/GaleriaFotos/Piezas/11_Piezak.jpg"
-                            class="item"
-                            alt="11_Piezak"
-                            data-description="Piezak 11 zelaiko trikuharriaren argazkiak"
-                        />
+
+                        <!-- Kalkolito garaikoak -->   
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-botoia.jpeg"
+                             class="item"
+                             alt="Botoia"
+                             data-description="Kalkolito garaikoak - V-erara zulatutako hezurrezko botoia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-gezipunta-1.jpeg"
+                             class="item"
+                             alt="Gezipunta 1"
+                             data-description="Kalkolito garaikoak - Orratza. 5,6 cm. Hezurrez ardi-metapodio baten zatian egindako orratza. Ziurrenik arropa eusteko edota ilerako erabilita."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-gezipunta-2.jpeg"
+                             class="item"
+                             alt="Gezipunta 2"
+                             data-description="Kalkolito garaikoak - Suharria edo mugerra. 2,9 cm. Gezi-punta hostokara baten urrun aldeko zatia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-ijelkia.jpeg"
+                             class="item"
+                             alt="Ijelkia"
+                             data-description="Kalkolito garaikoak - Suharrizko ijelkia. 3,6 cm. Zuzenean labana gisa erabil zitekeen zatia edo beste tresna batzuk egiteko erabil zitekeen zatia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-koilare-alea.jpeg"
+                             class="item"
+                             alt="Koilare alea"
+                             data-description="Kalkolito garaikoak - Koilare-alea (apaingailua). 3,2 cm. Lepoko, eskumuturreko edo bestelako apaingarriak osatzeko. Ardi berna-hezur zati batean egindako koilare alea erabiltzen zen"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-orratza.jpeg"
+                             class="item"
+                             alt="Orratza"
+                             data-description="Orratza. 5,6 cm. Hezurrez ardi-metapodio baten zatian egindako orratza. Ziurrenik arropa eusteko edota ilerako erabilita."/>
+
+
+
+                        <!-- Brontze garaikoak --> 
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-1.jpeg"
+                             class="item"
+                             alt="Lurrontzia 1"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-2.jpeg"
+                             class="item"
+                             alt="Lurrontzia 2"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-3.jpeg"
+                             class="item"
+                             alt="Lurrontzia 3"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-4.jpeg"
+                             class="item"
+                             alt="Lurrontzia 4"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-3.jpeg"
+                             class="item"
+                             alt="Gezipunta 3"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-4.jpeg"
+                             class="item"
+                             alt="Gezipunta 4"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-5.jpeg"
+                             class="item"
+                             alt="Gezipunta 5"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-6.jpeg"
+                             class="item"
+                             alt="Gezipunta 6"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+
+                        
                         </div>
                     </div>
                     <button id="prev">
