Subimos el código para poder ver los objetos 3D en realidad aumentada para Android (GLB) e iOS(USDZ)

--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -92,27 +92,48 @@
           <div id="wrapper">
             <div id="carousel">
                 <div id="content">
-                  <model-viewer
+
+                  <!-- ITXITA -->
+                  <model-viewer 
                     class="item"
                     bounds="tight"
-                    src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Hondatua.glb"
-                    alt="Mandubi Zelaiko Trikuharria 1"
+                    src="../../media/3D_Trikuharri/Escalado/GLB/GLB_Trikuharri_Itxia_Escalado.glb"
+                    ios-src="../../media/3D_Trikuharri/Escalado/USDZ/USDZ_trikuharri_itxia_escalado.usdz"
                     data-description="Mandubi Zelaiko Trikuharriaren 3D 1"
-                  ></model-viewer>
-                  <model-viewer
+                    alt="Mandubi Zelaiko Trikuharria 1"
+                    shadow-intensity="1"
+                    camera-controls
+                    auto-rotate ar>
+                  </model-viewer>
+
+                  <!-- IREKITA -->
+                  <model-viewer 
                     class="item"
                     bounds="tight"
-                    src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Irekia.glb"
-                    alt="Mandubi Zelaiko Trikuharria 2"
+                    src="../../media/3D_Trikuharri/Escalado/GLB/GLB_Trikuharri_Irekia_Escalado.glb"
+                    ios-src="../../media/3D_Trikuharri/Escalado/USDZ/USDZ_trikuharri_irekia_escalado.usdz"
                     data-description="Mandubi Zelaiko Trikuharriaren 3D 2"
-                  ></model-viewer>
-                  <model-viewer
+                    alt="Mandubi Zelaiko Trikuharria 2"
+                    shadow-intensity="1"
+                    camera-controls
+                    auto-rotate ar>
+                  </model-viewer>
+
+                  <!-- HONDATUTA -->
+                  <model-viewer 
                     class="item"
                     bounds="tight"
-                    src="../../media/3D_Trikuharri/GLB/GLB_Trikuharri_Itxita.glb"
-                    alt="Mandubi Zelaiko Trikuharria 3"
+                    src="../../media/3D_Trikuharri/Escalado/GLB/GLB_Trikuharri_Hondatua_Escalado.glb"
+                    ios-src="../../media/3D_Trikuharri/Escalado/USDZ/USDZ_trikuharri_hondatua_escalado.usdz"
                     data-description="Mandubi Zelaiko Trikuharriaren 3D 3"
-                  ></model-viewer>
+                    alt="Mandubi Zelaiko Trikuharria 3"
+                    shadow-intensity="1"
+                    camera-controls
+                    auto-rotate ar>
+                  </model-viewer>
+
+
+                  <!-- SKETCHFAB -->
                   <model-viewer
                     class="item"
                     src="https://sketchfab.com/models/f403450519b947aba3fcbe35aa0d70b4/embed"
