--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandubi Trikuharria</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../media/dolmenBlue.svg">
+    <link rel="icon" type="image/x-icon" href="media/dolmenBlue.svg">
 </head>
 <body>
     <!--Panel principal-->
@@ -22,15 +22,15 @@
             </div>
             <article class="img-fondo">
                 <div><h1 class="title fs-1">Mandubizelaia Trikuharria</h1></div>
-                <img src="../media/portada2.png" alt="Dólmen Mandubi">
+                <img src="media/portada2.png" alt="Dólmen Mandubi">
             </article>
         </section>
 
         <nav class="nav-bar">
             <ol class="p-0 m-0">
-                <li class="button-nav-bar"><a href="../html/historia/historia.html"><img src="../media/historyWhite.svg" alt="icono Historia"><p>Historia</p></a></li>
-                <li class="button-nav-bar"><a href="../html/mandubi/mandubi.html"><img src="../media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubi</p></a></li>
-                <li class="button-nav-bar"><a href="../html/investigacion/investigacion.html"><img src="../media/investigationWhite.svg" alt="icono Investigación"> <p>Ikerketa</p></a></li>
+                <li class="button-nav-bar"><a href="html/historia/historia.html"><img src="media/historyWhite.svg" alt="icono Historia"><p>Historia</p></a></li>
+                <li class="button-nav-bar"><a href="html/mandubi/mandubi.html"><img src="media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubi</p></a></li>
+                <li class="button-nav-bar"><a href="html/investigacion/investigacion.html"><img src="media/investigationWhite.svg" alt="icono Investigación"> <p>Ikerketa</p></a></li>
             </ol>
         </nav>
     </div>
