Cambios los títulos del menu

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
         <nav class="nav-bar">
             <ol class="p-0 m-0">
-                <li class="button-nav-bar"><a href="html/historia/historia.html"><img src="media/historyWhite.svg" alt="icono Historia"><p>Historia</p></a></li>
-                <li class="button-nav-bar"><a href="html/mandubi/mandubi.html"><img src="media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubi</p></a></li>
-                <li class="button-nav-bar"><a href="html/investigacion/investigacion.html"><img src="media/investigationWhite.svg" alt="icono Investigación"> <p>Ikerketa</p></a></li>
+                <li class="button-nav-bar"><a href="html/historia/historia.html"><img src="media/historyWhite.svg" alt="icono Historia"><p>Testuingurua</p></a></li>
+                <li class="button-nav-bar"><a href="html/mandubi/mandubi.html"><img src="media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubizelaia</p></a></li>
+                <li class="button-nav-bar"><a href="html/investigacion/investigacion.html"><img src="media/investigationWhite.svg" alt="icono Investigación"> <p>3D esperientzia</p></a></li>
             </ol>
         </nav>
     </div>
