Cambios el texto de la historia

--- a/html/historia/historia.html
+++ b/html/historia/historia.html
@@ -23,32 +23,11 @@
             </div>
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Trikuharriak Euskal Herrian</h1>
-                <p class="fs-5">Hurrengo testuetan, Euskal Herrian izan diren Trikuharrien informazio orokorra eta hauen azalpena emango da.</p>
+                <p class="fs-5">Duela 5.300 bat urte (Neolitotik Kalkolitora igarotzean), abeltzain trashumante talde batek Mandubizelaia trikuharria eraiki zuen eta gutxienez duela 3.700 bat urtera arte erabili hilobi bezala. Badirudi tartean bere erabileran mende batzuetako etenaldi bat ezagutu zuela.</p>
 
-                <br>
-                <h3>Neolitoaren hasiera Euskal Herrian</h3>
-                <p class="fs-5"><img class="w-100" src="../../media/Historia/Neolito.png" alt="proceso"></p>
+                
 
-                <br>
-                <h3>Trikuharriaren kronologia</h3>
-                <p class="fs-5"><img class="w-100" src="../../media/Historia/Kronologia.png" alt="proceso"></p>
-
-                <br>
-                <h3>Egitura hauen aniztasuna</h3>
-                <p class="fs-5"><img class="w-100" src="../../media//Historia/Egitura1.png" alt="proceso"></p><br>
-                <p class="fs-5"><img class="w-100" src="../../media//Historia/Egitura1.png" alt="proceso"></p>
-
-                <br>
-                <h3>Diseinua eta lanaren antolaketa</h3>
-                <p class="fs-5">Trikuaizti eta Mandubizelaiko hilobi-arkitekturak eraikitzeko inguruan (Kalteralde, Kizkitza) azaleratzen ziren basaltoak erabili ziren. Tumulua ia bakarrik harri-mota honekin egin zen, baina horrek formatu/forma egokiko harlauzak ez dituenez eskaintzen, ganberako zorua prestatzeko eta harlauzetarako kareharri tupatsuak eta arbela erabili zituzten.</p>
-                <p class="fs-5">Harrobi gisa erabilitako leku zehatzak ez ditugu ezagutzen, baina oso urruti joan gabe egongo dira. Harri-koskor batzuk erraz eskuragarri izango zituzten, baina ez nahikoak egitura egiteko eta geruzetatik ere atera beharko zituzten harrizko, zurezko eta hezurrezko pikotxekin, aspaldidanik muger edo suharri-meategietan (Mugarduia -Urbasa-, Mugerre -Lapurdi-, Araiko -Trebiñu-, etab.) egiten zuten bezala. Ondoren, ziur aski, harriak animalien laguntzaz mugitutako lera gisako ibilgailuetan garraiatuko zituzten.</p>
-                <!--<img src="../../media/Historia/Trikuharriak.png" alt="proceso" width="30%">-->
-                <p class="fs-5">Hilobi-arkitekturaren kokalekua hainbat irizpide jarraituz aukeratuko zuten, eta seguruenik, beste munduarekiko sinesmen ezezagunek ziotena, eta baita helburu praktiko (lana aurreztea, etab.) eta ekonomikoetan (kudeatzen zituzten eremuaren zuin gisa gainontzeko taldeek identifikatu zezaten) oinarrituta ere. Honetarako ikuseremu handiko tokiak aukeratzen zituzten eta era berean ikusgaitasuna paisaian nabarmentzen (tumulu handiak eta nabarmenak eginaz) saiatzen ziren.</p>
-                <p class="fs-5">Eraikuntza lanak auzolanean egingo ziren, elkarlanean, ez zen izango abeltzainen bat-bateko inprobisazioa. Denbora luzez iraungo zuten hilobi-arkitekturak hauek eraikitzeko tradizioz ikasitako jakindurian oinarrituko ziren. Gerta daiteke, pertsona gailen, ospetsu bat, eraikuntza egiteko egotea eta egingo ziren ospakizun eta errituen ardura ere edukitzea.</p>
-                <p class="fs-5">Sarritan, bertan hazten zen landaretzari su emanaz hasiera ematen zioten lanari. Ondoren, bertara inguratuta eta euren ezaugarrien arabera (harlauza edo harri-koskor; neurriak) multzoetan sailkatutako harriak erabiliko zituzten. Lehen urratsa ganberaren burualdeko harlauza jartzea izango zen eta bere arrimuan, ukituz, batzuetan alboko harlauza handiak lur-erreten edo zangetan sartuz tinkatuta gel zitezen.</p>  
-                <p class="fs-5">Ganberako harlauzetatik kanporantz harri handi xamarrak teilakatuz bezala jartzen ziren egitura sendotzeko, eta hauen gainean beste batzuk txikiagoak ia ganberaren estalkia estali arte. Hauen gainean jarritakoak txikiagoak dira eta ez daude hain ondo ipinita. Harri-metaketa honi tumulu edo armorkora deitu ohi zaio. Gainera, batzuetan, kanpo aldetik tumulua inguratuz, sendotuz eta mugatuz harriak zutika jarrita izaten zituzten, harri-zirkulu edo harrespil itxura hartuz.</p>
-
-                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria" target="_blank"><button class="lang fw-bolder">+ info</button></a>
+                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria#NEOLITOAREN-HASIERA-EUSKAL-HERRIAN" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
                  
             </article>
