--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -24,23 +24,19 @@
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">Mandubizelaia Trikuharria</h1>
 
-                 <p class="fs-5">Trikuharria 1998-2000 urteetako 3 udatan zehar industu zen EHUko Joxean Mujika arkeologoa buru zela, Gipuzkoako Foru Aldundiko dirulaguntzaz eta UPV/EHUko ikasleen borondatezko lanarekin. Hasierako ideia trikuharria erakusgarri jartzea izan bazen ere, horretarako zein neurri har ote zitezkeen aztertu zen. Azkenean, Giorgio Studer, orduko Gipuzkoako Foru Aldundiako errestauradorea, eta Joxean Mujika arkeologoaren aholkuaz baztertu egin zen, izan ere hiru harlauza handietatik bakarra da kareharrizkoa eta beste biak harbel-harrizkoak direnez, azalean utziz gero izotzagatik asko hondatuko zirela-eta, berriro lurrez estaltzea erabaki zen. </p>
+                 <p class="fs-5">Mandubizelaiko hilobi-arkitektura eraikitzeko, inguruan (Kalteralde, Kizkitza) azaleratzen ziren basaltoak erabili ziren.
+Tumulua ia bakarrik harri-mota honekin egin zen, baina basaltoak forma egokiko harlauzak ez dituenez eskaintzen, ganberako zorua prestatzeko eta harlauzetarako kareharri tupatsuak eta arbela erabili zituzten.
+Arbela galkorragoa denez (ganberako 3 harlauzatatik 2 hala dira), industu ondoren (UPV/EHU, 1998-2000) estaltzea erabaki zen, ez zedin gehiago hondatu.
+</p>
 
-                <img class="img-float" src="../../media/GaleriaFotos/Mandubi/02_Mandubi.jpg" alt="dolmen de Mandubi">
+                <!--<img class="img-float" src="../../media/GaleriaFotos/Mandubi/02_Mandubi.jpg" alt="dolmen de Mandubi">
+                <img class="img-float" src="../../media/GaleriaFotos/Mandubi/08_Mandubi.jpg" alt="dolmen de Mandubi">-->
 
-                <p class="fs-5">Trikuharri gehienak mendi aldean kokatzen dira eta horrek pentsarazten du hor bizi ziren giza-taldeak abeltzainak izango zirela. Neguan, ez ziren bertan biziko, talde trashumanteak zirenez euren jatorrizko herrisketara itzuliko ziren. Batzuk, ezezagunak, inguruko haranetan edo kostaldean egon zitezkeen, baina beste batzuk urrutirago kokatuko ziren, hegoalderagoko lurralde idorragoetan (Nafarroako erdi aldean, etab.).
-Urtean zehar herriska horietan biziko ziren. Batzuetan, batez ere Nafarroan eta Araban aurkitutakoei esker dakigu nolakoak izan zitezkeen, zurez eta pezoz egindako etxebizitzak (laukizuzenak, etab.) eta abereak gordetzeko itxiturak zituzten, eta zenbaitetan hobietan egindako ehorzketak ere bai, eta inguruan soro txikiak eta larreak. Euskal Herria hezean ez dira ia ezagutzen bizileku hauen aztarnak (Haltzerreka -Etzegarate-, Igaratza -Aralar-, etab.) ez direlako ondo kontserbatzen edota ez ditugulako aurkitu, eta baita batzuk gure gaurko herrien edo industrialdeen azpietan daudelako ere.</p> <br><br>
+                <p class="fs-5">Tumuluak 17 metroko diametroa du. Erdialdean, gutxi-gorabehera, ekialdetik mendebaldera trapezio-formako ganbera kokatzen da, 1,80 m luze dena, nahiz eta ganberaren alde baterako 3 m luze zen harlauza bat aukeratu. Zabalera, buru aldean, 1,14 m eta beste muturrean, ekialdean, 0,80 m da.</p> <br><br>
 
-                <img class="img-float" src="../../media/GaleriaFotos/Mandubi/08_Mandubi.jpg" alt="dolmen de Mandubi">
+                
 
-                <p class="fs-5">Udaberria aurreratzen zenean, herriska hauetatik abereak hartuta abeltzain talde ezberdinak irtengo ziren udako mendiko larreetara. Belaunaldiz belaunaldi toki jakinetara joango ziren. Horrelako tokiak, historikoki, saroi edo korta bezala izendatzen ziren. Bertan zeuden euren txabolak, eta beste egitura osagarri batzuk, eta trikuharriak, taldearen hilerria eta lurralde-zuina. 
-Abeltzain-talde horien osaketa ez zen herriskakoaren berdina, badirudi ugariagoak zirela gizonezkoak eta gazteak, eta gutxiago emakumeak, umeak eta agureak. Pentsa daiteke horren arrazoia izan zitekeela abere-lapurretak eta liskarrak uste baino ugariagoak zirela.</p>
-
-
-                <p class="fs-5">Tumuluak 17 m-ko diametroa eta 0,40 m-ko altuera ditu, baina ekialdean badirudi altuera handiagoa duela, gune zabal baten muturrean eta aldapa bizkortzen hasten den tokian eraikita dagoelako. Erdialdean, gutxi-gorabehera, Ekialdetik Mendebalderanzko norantza duen trapezio-formako ganbera kokatzen da, 1,80 m luze dena, nahiz eta ganberaren alde baterako 3 m luze zen harlauza bat aukeratu. Zabalera, buru aldean, 1,14 m da eta beste muturrean, ekialdean, 0,80 m ditu.
-                Lehenengo gorpuak ganberaren zorua ia osorik estaltzen zuen arbelezko/tupazko harlauza baten gainean ipini ziren.</p>
-
-                <a href="https://www.itsaso.eus/es/dolmen-mandubizelaia" target="_blank"><button class="lang fw-bolder">+ info</button></a>
+                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria#MANDUBIZELAIA" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
 
             </article>
